syntax = "proto3";

package userservicepb;

option go_package = "userservicepb/";

import "google/protobuf/timestamp.proto";

service UserServiceGRPC {
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
  string code = 1;
  int32 status = 2;
  string message = 3;
  
  repeated User users = 4;
}

message User {
  int64 id = 1;
  string full_name = 2;
  string email = 3;
  string username = 4;
  string address = 5;
  string role_name = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}